--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
-        "laravel-mix": "^4.0.7",
+        "laravel-mix": "^5.0.1",
         "less-loader": "^5.0.0",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
         "resolve-url-loader": "2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "7.*",
+        "serialize-javascript": ">=2.1.1",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
     },
